Add banana ice cream recipe

--- a/recipes/icecream.html
+++ b/recipes/icecream.html
@@ -7,5 +7,20 @@
 </head>
 <body>
     <h1>Banana Ice Cream</h1>
+    <img src="../img/Ice-cream-image.webp" alt="Image of ice cream">
+    <h2>Description</h2>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 Banana</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Peel the banana and chop.</li>
+        <li>Put the bananas in an airtight container.</li>
+        <li>Freeze the banana pieces for at least 2 hours.</li>
+        <li>Pulse the frozen banana pieces in a small food processor or powerful blender.</li>
+        <li>Keep blending until creamy texture.</li>
+        <li>Transfer to an airtight container and freeze until solid.</li>
+    </ol>
 </body>
 </html>
