Change link to relative

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="https://www.thekitchn.com/how-to-make-creamy-ice-cream-with-just-one-ingredient-cooking-lessons-from-the-kitchn-93414">
-        Banana Ice Cream Recipe
-    </a>
+    <a href="recipes/icecream.html">Banana Ice Cream Recipe</a>
 </body>
 
 </html>
