Add two new recipes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/icecream.html">Banana Ice Cream Recipe</a>
+    <ul>
+        <li><a href="recipes/icecream.html">Banana Ice Cream Recipe</a></li>
+        <li><a href="recipes/scrambled-eggs.html">Scrambled Eggs Recipe</a></li>
+        <li><a href="recipes/sugar-cookies.html">Sugar Cookies Recipe</a></li>
+    </ul>
 </body>
 
 </html>
